# learning-embedded-rust

./: .gitignore
stm32f103rb/stm32f103rb_adc/: Cargo.toml
stm32f103rb/stm32f103rb_adc/.cargo/: config
stm32f103rb/stm32f103rb_adc/src/: main.rs
stm32f103rb/stm32f103rb_blink/: Cargo.toml  Embed.toml  memory.x
stm32f103rb/stm32f103rb_blink/src/: main.rs
stm32f103rb/stm32f103rb_gpio/: Cargo.toml  README.md
stm32f103rb/stm32f103rb_gpio/.cargo/: config
stm32f103rb/stm32f103rb_gpio/src/: main.rs
stm32f103rb/stm32f103rb_hello/: Cargo.toml
stm32f103rb/stm32f103rb_hello/.cargo/: config
stm32f103rb/stm32f103rb_hello/src/: main.rs
stm32f103rb/stm32f103rb_i2c_find_devices/: Cargo.toml
stm32f103rb/stm32f103rb_i2c_find_devices/src/: main.rs
stm32f401re/stm32f401re_hello/: Cargo.toml  Embed.toml
stm32f401re/stm32f401re_hello/.cargo/: config
stm32f401re/stm32f401re_i2c_find_devices/: Cargo.toml
stm32f401re/stm32f401re_i2c_find_devices/src/: main.rs
stm32l4s5/stm32l4s5_hello/: Cargo.toml  Embed.toml  memory.x
stm32l4s5/stm32l4s5_hello/.cargo/: config
stm32l4s5/stm32l4s5_hello/src/: main.rs
