[package]
name = "stm32f103rb_gpio"
version = "0.1.0"
authors = ["hauju <hauke.jung@outlook.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
nb = "1.0.0"
cortex-m = "0.7.1"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"

[dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["rt", "stm32f103", "medium"]
