[package]
name = "stm32f103rb_hello"
version = "0.1.0"
authors = ["hauju <hauke.jung@outlook.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
cortex-m-rt = "0.6.13"
rtt-target = { version = "0.3.0", features = ["cortex-m"]}