[package]
name = "stm32f401re_i2c_find_devices"
version = "0.1.0"
authors = ["hauju <hauke.jung@outlook.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.6"
nb = "1.0.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"]}

[dependencies.stm32f4xx-hal]
version = "0.10.1"
features = ["rt", "stm32f401"]
